--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "db": "mongodb+srv://root:root@barbershopcluster.0ahhl.mongodb.net/barbershop-db?retryWrites=true&w=majority",
   "server": {
     "url": "0.0.0.0",
-    "port": process.env.PORT,
+    "port": 8080,
   },
   "mail": {
     "service": "gmail",
